--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         <div class="message-container"></div>
     {% endif %}
 
-    {% clock page_header %}
+    {% block page_header %}
     {% endblock %}
 
     {% block content %}
